--- a/style.css
+++ b/style.css
@@ -1,317 +1,118 @@
-@import url(htpp://fonts.googleapis.com);
-/* global */
-*{    margin:0;
-    padding:0;
-    box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-/* NAV BAR*/
-.navbar{
-    position:absolute;
-    top:0;
-    left: 0;
-    display: flex;
-   width: 100%;
-   justify-content: space-between; 
-   padding: 20px;
-   color:whitesmoke;
+body{
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  overflow: hidden;
 }
-ul{
-    list-style: none;
+.center{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
 }
-.Active a
+.background
 {
-    color:red;
-    text-decoration:underline;
-    font-weight:bold;
+  background-size: cover;
+  padding-top:-330vh;
 
 }
-
-
-.nav-links
-{
-    display:flex;
-    align-items: center;
-    color: whitesmoke;   
-
+.center h1{
+  text-align: center;
+  padding: 20px 0;
+  border-bottom: 1px solid silver;
 }
-.nav-links a{
-    margin: 0 20px;
-    color:whitesmoke;
+.center form{
+  padding: 0 40px;
+  box-sizing: border-box;
 }
-
-header{
-    width:100vw;
-    height: 100vh;
-    background-image:url(img/header-bg.png);
-    background-size: cover;
-    display: flex;
-    align-items:flex-end;
-    justify-content: center;
-} 
-a{
-    text-decoration: none;
+form .txt_field{
+  position: relative;
+  border-bottom: 2px solid #adadad;
+  margin: 30px 0;
 }
-.header-content{
-    margin-bottom:149px;
-    color: whitesmoke;
-    text-align: center;
+.txt_field input{
+  width: 100%;
+  padding: 0 5px;
+  height: 40px;
+  font-size: 16px;
+  border: none;
+  background: none;
+  outline: none;
 }
-.header-content h2{
-    font-size: 9vmin;
-    animation-duration: 5s;
-    animation-direction: reverse;
-    animation: cubic-bezier('n');
+.txt_field label{
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  color: #adadad;
+  transform: translateY(-50%);
+  font-size: 16px;
+  pointer-events: none;
+  transition: .5s;
 }
-.line
-{
-    /*-moz-window-shadow: ;*/
-    width: 80px;
-    height: 4px;
-    background: crimson;
-    margin:6px auto;
-    border-radius: 8px;
-
+.txt_field span::before{
+  content: '';
+  position: absolute;
+  top: 40px;
+  left: 0;
+  width: 0%;
+  height: 2px;
+  background: #ce81c7;
+  transition: .5s;
 }
-.header-content h1
-{
-    font-size: 9vmin;
-    margin-top: 49px;
-    margin-bottom: 30px;
-
+.txt_field input:focus ~ label,
+.txt_field input:valid ~ label{
+  top: -5px;
+  color: #d646ca;
 }
-
-
-
-.ctn
-{
-    padding:10px 18px;
-    background-color:#fc036b;
-    border-radius: 7px;
-    color: whitesmoke;
+.txt_field input:focus ~ span::before,
+.txt_field input:valid ~ span::before{
+  width: 100%;
 }
-.menu-btn
-{
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    width: 30px;
-    cursor: pointer;
-    display: none;
-    margin-top: 35px;
-    animation:alternate-reverse;
-
+.pass{
+  margin: -5px 0 20px 5px;
+  color: #a6a6a6;
+  cursor: pointer;
 }
-.mobile-menu
-{
-    margin-top:0px;
-
+.pass:hover{
+  text-decoration: underline;
 }
-
-/*Section*/
-
-section
-{
-    width: 100%;
-   
-    
+input[type="submit"]{
+  width: 100%;
+  height: 50px;
+  border: 1px solid;
+  background: #da3ecd;
+  border-radius: 25px;
+  font-size: 18px;
+  color: #e9f4fb;
+  font-weight: 700;
+  cursor: pointer;
+  outline: none;
 }
-.title
-{
-    text-align: center;
-    font-size: 4vh;
-    color:rgba(36, 43, 99, 0.945)
+input[type="submit"]:hover{
+  border-color: #110f11;
+  transition: .05s;
 }
-.row
-{
-    display: flex;
-    align-items: center;
-    width:100% ;
-    justify-content: space-between;
-    
-
+.signup_link{
+  margin: 30px 0;
+  text-align: center;
+  font-size: 16px;
+  color: #666666;
 }
-.row .column1
-{
-  
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-
+.signup_link a{
+  color: #2691d9;
+  text-decoration: none;
 }
-.row .column2
-{
-  
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-
+.signup_link a:hover{
+  text-decoration: underline;
 }
-.column1
-{
-    margin-left:2%;
-    text-align: center;
-}
-.column2
-{
-    margin-right: 50px;
-    margin-left: 18%;
-    text-align: center;
-
-}
-.column1 h4{
-    font-family: fantasy;
-}
-.column1 p
-{
-    text-align: center ;
-}
-.column1 a{
-    margin:center;
-    margin-top:20px;
-
-}
-.column2 a{
-    margin:center;
-    margin-top:20px;
-
-}
-.events .row
-{
-    margin-top: 50px;
-
-}
-h4
-{
-    font-size: 30px;
-    color:rgb(35, 25, 53);
-    margin: 20px auto;
-}
-p{
-    color: rgb(38, 13, 46);
-    padding: 0px 40px;
-
-}
-.events
-{
-    margin-top: 30px;
-}
-body ,html{
-    overflow-x: hidden;
-    
-}
-
-/* for explore section*/
-
-
-.explore
-{
-    width: 100%;
-    height: 60vh;
-    background-image: url(img/bg2.png);
-    background-position:center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
-    color: whitesmoke;
-    margin-top: 10%;
-}
-.explore-content
-{
-    width: 60%;
-    padding: 50px;
-    color: whitesmoke;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-.explore-content h1{
-    font-size: 7vmin;
-    
-
-}
-.explore-content .line
-{
-    margin-bottom: 80px;
-}
-.explore-content p
-{
-    color: whitesmoke;
-}
-.explore-content .ctn{
-    margin-top:50px;
-}
-
-
-/* for image gallery */
-.content-col
-{
-    width: 60%;
-    margin-top: 10%;
-
-}
-.image-col
-{
-    width: 50%;
-    margin-right: 35px;
-    margin-left: 65%;
-    padding: 0px;
-    margin-bottom:10% ;
-    margin-top:-30%;
-}
-.tours .image-gallery
-{
-    display: flex;
-    flex-wrap:wrap;
-    width:100%;
-    align-items: center;
-
-}
-.image-gallery img{
-    max-width:250px;
-    margin: 10px;
-
-}
-.content-col h1{
-    font-size: 10vmin;
-    color: rgba(27, 27, 56, 0.856);
-    align-items: center;
-    margin-left:80px;
-    display: flex;
-}
-.content-col p{
-    align-items: center;
-    font-family: 'Times New Roman', Times, serif;
-    margin-left: 20px;
-}
-.content-col a{
-
-    align-items: center;
-    margin-bottom:0%;
-    margin-left: 34%;
-    margin-top: -40%;
-
-}
-/* Footer Section*/
-.footer
-{
-    width: 100%;
-    height: 100px;
-    background-color:rgba(54, 8, 77, 0.993);
-    text-align: center;
-}
-.footer p
-{
-    color:whitesmoke;
-    margin-bottom:60px;
-    align-items:center;
-    margin-top: 40px;
-    margin-bottom:0px;
-    text-align:center;
-    
-}
-
-
-
